@@ -1,7 +1,10 @@
 WIAPASCAL CHANGE LOG
 ======================
 
-2024/09/06 Added SelectedProperties and RootProperties; 
+2024/09/27 Use of Formal Types for TWIADevice.SetProperty/GetProperty
+        24 Added TWIAPropertyFlags and WIAPropertyFlags function
+	13 Demo List Properties Flags and Vector Values
+        06 Added SelectedProperties and RootProperties; 
 	   Added SetProperty; 
 	   First Download Test with dpi;
 
